# sdk

./: .gitignore  README.md
.github/workflows/: ci.yml
fixtures/: schema.json
fixtures/v1/: README.md  link-cases.json  message-only.json
go/: README.md  go.mod
go/wipeme/: client.go  client_test.go  envelope.go  envelope_test.go  link.go  link_test.go
javascript/: README.md  package-lock.json  package.json
javascript/scripts/: benchmark-progress.mjs
javascript/src/: api.js  constants.js  crypto.js  index.js  progress.js
javascript/test/: api.test.js  crypto.test.js  link.test.js
python/: README.md  pyproject.toml
python/src/wipeme/: __init__.py  api.py  crypto.py  link.py
python/tests/: test_api.py  test_crypto.py  test_link.py
scripts/: check-fixtures.mjs  check-workspace-consistency.mjs
specification/: api-decisions.md  capabilities-v1.md  progress-benchmarks.md  protocol-v1.md  upstreams.json  version-matrix.md
