[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "wipe-me"
version = "0.4.0a1"
description = "Python SDK for the Wipe.me encrypted messaging protocol and API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Wipe.me" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security :: Cryptography"
]
keywords = ["wipe-me", "encryption", "one-time", "messaging", "privacy"]
dependencies = [
  "argon2-cffi>=23.1.0,<26",
  "cryptography>=42,<51",
]

[project.urls]
Homepage = "https://wipe.me"
Repository = "https://github.com/wipe-me/sdk"
Issues = "https://github.com/wipe-me/sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wipeme"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "wipeme/LICENSE"
